--- a/registro.html
+++ b/registro.html
@@ -3,10 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <title>L2 Eragon - Registro</title>
 </head>
 <body>
+
+    <header>
+        <div class="menu contenedor">
+            <a href=""><img src="img/eragon-logo.svg" alt="logo"></a>
+            <div class="navegacion">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                            <a href="#">Server</a>
+                            <a href="#">Download</a>
+                            <a href="#">Community</a>
+                            <a href="#">Store</a>
+                            <a href="#">Elements</a>
+                            <div class="animation start-home"></div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <a href=""><img src="img/search.svg" alt="icon buscar"></a>
+            <a href=""><img src="img/config.svg" alt="icon config"></a>
+        </div>
+    </header>
+
+    <main class="contenedor">
+        <h2>Register web account</h2>
+        <div class="info-registro">
+            <h3>Importance of registering on the web</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam.</p>
+            <div class="follow">
+                <p>follow us on:</p>
+                <img src="img/face.svg" alt="facebook">
+                <img src="img/twitter.svg" alt="twitter">
+                <img src="img/youtube.svg" alt="youtube">
+                <img src="img/insta.svg" alt="instagram">
+                <img src="img/twitch.svg" alt="twich">
+            </div>
+        </div>
+        <div class="form-acc">
+            <form action="">
+                <input type="text" name="name" id="name" placeholder="You Name">
+                <input type="email" name="mail" id="mail" placeholder="Email Address">
+                <input type="email" name="r-mail" id="r-mail" placeholder="Repeat Email Address">
+                <input type="password" name="pass" id="pass" placeholder="Password">
+                <input type="password" name="r-pass" id="r-pass" placeholder="Repeat Password">
+                <input type="submit" value="submit">
+            </form>
+        </div>
+    </main>
+
+    <footer>
+        <div class="nav-footer">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                        <a href="#">Server</a>
+                        <a href="#">Download</a>
+                        <a href="#">Community</a>
+                        <a href="#">Store</a>
+                        <a href="#">Elements</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="social-footer">
+            <img src="img/face.svg" alt="facebook">
+            <img src="img/twitter.svg" alt="twitter">
+            <img src="img/youtube.svg" alt="youtube">
+            <img src="img/insta.svg" alt="instagram">
+            <img src="img/twitch.svg" alt="twich">
+        </div>
+        <div class="copy">
+            <p>Lineage 2 Eragon 2020. Todos los derechos reservados</p>
+            <p>Web Design by <a href="#">CREA</a></p>
+        </div>
+    </footer>
     
 </body>
 </html>
